--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "@strapi/plugin-i18n": "4.9.2",
     "@strapi/plugin-users-permissions": "4.9.2",
     "@strapi/strapi": "4.9.2",
+    "axios": "^1.3.6",
     "better-sqlite3": "8.0.1",
     "strapi-plugin-populate-deep": "^2.0.0"
   },
